bindings/java/src/com/onepub/revault/RevaultNativeApi.java

    vault_directory_list_form_revisions = linker.downcallHandle(symbols.find("vault_directory_list_form_revisions").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_seed_forms = linker.downcallHandle(symbols.find("vault_directory_seed_forms").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_directory_remember_password = linker.downcallHandle(symbols.find("vault_directory_remember_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_remembered_password = linker.downcallHandle(symbols.find("vault_directory_remembered_password").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_backup_default = linker.downcallHandle(symbols.find("vault_backup_default").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
    vault_restore_default = linker.downcallHandle(symbols.find("vault_restore_default").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BOOLEAN));
    vault_directory_free = linker.downcallHandle(symbols.find("vault_directory_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    vault_read_only_open = linker.downcallHandle(symbols.find("vault_read_only_open").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_read_only_open_default = linker.downcallHandle(symbols.find("vault_read_only_open_default").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_read_only_list_profile_names = linker.downcallHandle(symbols.find("vault_read_only_list_profile_names").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_read_only_list_contact_names = linker.downcallHandle(symbols.find("vault_read_only_list_contact_names").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_read_only_list_form_aliases = linker.downcallHandle(symbols.find("vault_read_only_list_form_aliases").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_read_only_list_known_lockboxes = linker.downcallHandle(symbols.find("vault_read_only_list_known_lockboxes").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_read_only_free = linker.downcallHandle(symbols.find("vault_read_only_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    vault_agent_serve = linker.downcallHandle(symbols.find("vault_agent_serve").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_agent_verify_transport = linker.downcallHandle(symbols.find("vault_agent_verify_transport").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_agent_get = linker.downcallHandle(symbols.find("vault_agent_get").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_put = linker.downcallHandle(symbols.find("vault_agent_put").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_forget = linker.downcallHandle(symbols.find("vault_agent_forget").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_stop = linker.downcallHandle(symbols.find("vault_agent_stop").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_agent_start = linker.downcallHandle(symbols.find("vault_agent_start").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_agent_list = linker.downcallHandle(symbols.find("vault_agent_list").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_agent_sleep_support = linker.downcallHandle(symbols.find("vault_agent_sleep_support").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_platform_status = linker.downcallHandle(symbols.find("vault_platform_status").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_platform_set_scope = linker.downcallHandle(symbols.find("vault_platform_set_scope").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_platform_forget_password = linker.downcallHandle(symbols.find("vault_platform_forget_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_platform_put_password = linker.downcallHandle(symbols.find("vault_platform_put_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_platform_enable = linker.downcallHandle(symbols.find("vault_platform_enable").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_platform_disable = linker.downcallHandle(symbols.find("vault_platform_disable").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_platform_disabled = linker.downcallHandle(symbols.find("vault_platform_disabled").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_platform_get_password = linker.downcallHandle(symbols.find("vault_platform_get_password").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_default_directory = linker.downcallHandle(symbols.find("vault_default_directory").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_default_path = linker.downcallHandle(symbols.find("vault_default_path").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_agent_log_path = linker.downcallHandle(symbols.find("vault_agent_log_path").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_agent_log_destination = linker.downcallHandle(symbols.find("vault_agent_log_destination").orElseThrow(), FunctionDescriptor.of(BUFFER));
    vault_agent_get_vault_unlock_key = linker.downcallHandle(symbols.find("vault_agent_get_vault_unlock_key").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_put_vault_unlock_key = linker.downcallHandle(symbols.find("vault_agent_put_vault_unlock_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    vault_agent_forget_vault_unlock_key = linker.downcallHandle(symbols.find("vault_agent_forget_vault_unlock_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_get_owner_signing_key = linker.downcallHandle(symbols.find("vault_agent_get_owner_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_put_owner_signing_key = linker.downcallHandle(symbols.find("vault_agent_put_owner_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_forget_owner_signing_key = linker.downcallHandle(symbols.find("vault_agent_forget_owner_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_begin_activity = linker.downcallHandle(symbols.find("vault_agent_begin_activity").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_agent_end_activity = linker.downcallHandle(symbols.find("vault_agent_end_activity").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    vault_local = linker.downcallHandle(symbols.find("vault_local").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS));
    vault_create_lockbox_password = linker.downcallHandle(symbols.find("vault_create_lockbox_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_open_lockbox_password = linker.downcallHandle(symbols.find("vault_open_lockbox_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_create_lockbox_content_key = linker.downcallHandle(symbols.find("vault_create_lockbox_content_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_create_lockbox_contact = linker.downcallHandle(symbols.find("vault_create_lockbox_contact").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_open_lockbox_content_key = linker.downcallHandle(symbols.find("vault_open_lockbox_content_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_cache_lockbox_password = linker.downcallHandle(symbols.find("vault_cache_lockbox_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    vault_close_lockbox = linker.downcallHandle(symbols.find("vault_close_lockbox").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_close_all = linker.downcallHandle(symbols.find("vault_close_all").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));
    vault_free = linker.downcallHandle(symbols.find("vault_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
  }
}
